--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,9 +17,8 @@
                 <li><a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
                 <li><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About</a></li>
                 <li><a routerLink="/bts" routerLinkActive="active" ariaCurrentWhenActive="page">BTS</a></li>
-                <li><a routerLink="/blog" routerLinkActive="active" ariaCurrentWhenActive="page">Blog</a></li>
+                <li><a routerLink="/gallery" routerLinkActive="active" ariaCurrentWhenActive="page">Gallery</a></li>
             </ul>
         </div>
     </div>
 </nav>
-
