--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,30 @@
-<footer>
+<!-- <footer>
     <p>Team 3</p>
+</footer> -->
+
+<footer>
+    <div class="footer-content">
+        <h3>PawsititveID</h3>
+        <p>This Project website is developed by Team 3 - PawsititveID as part of the course MET CS 673 - Software
+            Engineering.</p>
+        <ul class="socials">
+            <li><a href="#"><i class="fa-brands fa-github-alt"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-file-pdf"></i></a></li>
+            <li><a href="#"><i class="fa-regular fa-file-powerpoint"></i></a></li>
+            <li><a target="_blank" href="https://www.pivotaltracker.com/n/projects/2644380"><i
+                        class="fa-solid fa-arrow-up-wide-short"></i></a></li>
+        </ul>
+    </div>
+    <div class="footer-bottom">
+        <p>copyright &copy; <a href="#">2023</a> </p>
+        <div class="footer-menu">
+            <ul class="f-menu">
+                <li><a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
+                <li><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About</a></li>
+                <li><a routerLink="/bts" routerLinkActive="active" ariaCurrentWhenActive="page">BTS</a></li>
+                <li><a routerLink="/gallery" routerLinkActive="active" ariaCurrentWhenActive="page">Gallery</a></li>
+            </ul>
+        </div>
+    </div>
+
 </footer>
