--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 * {
@@ -9,10 +10,11 @@
 }
 
 body {
-    font-family: 'Balsamiq Sans', cursive;
+    /* font-family: 'Balsamiq Sans', cursive; */
+    font-family: 'Noto Sans Display', sans-serif;
     font-size: 0.925rem;
-    background-color: #f6fba2;
-    background-image: linear-gradient(315deg, #f6fba2 0%, #20ded3 74%);
+    background-color: #c1c1c1;
+    /* background-image: linear-gradient(315deg, #f6fba2 0%, #20ded3 74%); */
 }
 
 a {
