--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -110,3 +110,24 @@ img {
     aspect-ratio: 16 / 13;
     transition: 400ms ease-in-out;
 }
+
+#searchInput {
+    margin-top: 15px;
+    margin-left: 15%;
+    margin-bottom: 5px;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+}
+
+input[type=text] {
+    width: 30%;
+    -webkit-transition: width 0.15s ease-in-out;
+    transition: width 0.15s ease-in-out;
+}
+
+/* When the input field gets focus,
+		change its width to 100% */
+input[type=text] {
+    width: 70%;
+}
