--- a/src/app/bts/bts.component.css
+++ b/src/app/bts/bts.component.css
@@ -16,7 +16,6 @@
     border-radius: .5rem;
     font-weight: 500;
     font-size: 18px;
-    float: right;
     cursor: pointer;
     width: 200px;
     height: 50px;
@@ -24,15 +23,18 @@
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
+    margin: 10px;
 }
 
 .rep__button--flex {
     display: inline-flex;
     align-items: center;
+    justify-content: center;
 }
 
 .pdid__btn {
-    margin-left: 10px;
+    margin: auto;
+    text-align: center;
 }
 
 .pdid__desc__container {
