--- a/src/app/bts/bts.component.html
+++ b/src/app/bts/bts.component.html
@@ -6,14 +6,23 @@
             </div>
         </div>
 
+        <div class="pdid__btn">
+            <a download="" href="assets/pdf/my-new-dog-pdf-version.pdf" class="rep__button rep__button--flex">
+                Documentation&nbsp; <i class="fa-regular fa-file-pdf"></i>
+            </a>    
+            <a download="" href="assets/pdf/my-new-dog-pdf-version.pdf" class="rep__button rep__button--flex">
+                Presentation&nbsp; <i class="fa-regular fa-file-powerpoint"></i>
+            </a>    
+            <a download="" href="assets/pdf/my-new-dog-pdf-version.pdf" class="rep__button rep__button--flex">
+                Github Repo&nbsp; <i class="fa-solid fa-code-merge"></i>
+            </a>    
+            <a download="" href="assets/pdf/my-new-dog-pdf-version.pdf" class="rep__button rep__button--flex">
+                Pivotal Tracker&nbsp; <i class="fa-solid fa-arrow-up-wide-short"></i>
+            </a>    
+        </div>
+
         <div class="pdid__desc__container">
             <div class="pdid__desc">
-                <div class="pdid__btn">
-                    <a download="" href="assets/pdf/my-new-dog-pdf-version.pdf" class="rep__button rep__button--flex">
-                        Downlaod Report <i class="uil uil-file-download"></i>
-                    </a>    
-                </div>
-
                 <div class="pdid__para">
                     <p>
                         The project "Dog Breed Identification" aims to develop an intelligent system capable of
