--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
 
     <div class="about__project">
         <div class="about__title">
-            <h1><u>About Us</u></h1>
+            <h1><u>About</u></h1>
         </div>
         <div class="about__desc">
             <p>
@@ -40,7 +40,7 @@
 
     <div class="about__team">
         <div class="about__title">
-            <h1><u>About team</u></h1>
+            <h1><u>Team</u></h1>
         </div>
 
         <!-- ============== Stephen Boorman ============== -->
@@ -145,7 +145,8 @@
                     <div class="team__specs">
                         <div class="person__name">Sri Divya Raparala</div>
                         <div class="person__position">Head Scratcher-in-Chief</div>
-                        <div class="person__quote">"Happiness is a warm puppy."</div>
+                        <div class="person__quote">"The love of a dog is a pure thing. He gives you a trust which is
+                            total. You must not betray it."</div>
                         <div class="person__fav__dog">Fav Dog: Golden Retriever
                             <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
@@ -167,15 +168,15 @@
                         <div class="person__position">Fur Baby Wrangler</div>
                         <div class="person__quote">"Once you have had a wonderful dog,
                             a life without one is a life diminished."</div>
-                            <div class="person__fav__dog">Fav Dog: Golden Retriever
-                                <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
-                            </div>
+                        <div class="person__fav__dog">Fav Dog: Golden Retriever
+                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
-                        <div class="person__social">
-                            <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
-                            <a href="#" target="_blank"><i class="uil uil-github"></i></a>
-                            <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
-                        </div>
+                    </div>
+                    <div class="person__social">
+                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
