--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,7 +14,7 @@ footer {
     right: 0;
     background: #111;
     height: auto;
-    width: 100vw;
+    /* width: 100vw; */
     padding-top: 40px;
     color: #fff;
 }
@@ -79,7 +79,7 @@ footer {
 
 .footer-bottom {
     background: #000;
-    width: 100vw;
+    /* width: 100vw; */
     padding: 20px;
     padding-bottom: 40px;
     text-align: center;
