--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
                 <span></span>
                 <span></span>
             </button>
-            <a href="#">
+            <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
                 <h4>Pawsitive<span>ID</span></h4>
             </a>
         </div>
