--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,105 +1,12 @@
 <div class="home__container">
     <div class="left__container">
-        <div class="home__img">
+        <!-- <div class="home__img">
             <img src="../../assets/images/logo/PawsitiveID_loading.gif" class="home__gif" alt="">
-            <!-- <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt" height="143.000000pt"
-                viewBox="0 0 300.000000 143.000000" preserveAspectRatio="xMidYMid meet">
-                <metadata>
-                    Created by potrace 1.10, written by Peter Selinger 2001-2011
-                </metadata>
-                <g transform="translate(0.000000,143.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
-                    <path d="M328 1387 c-128 -45 -229 -135 -287 -257 -24 -51 -26 -65 -26 -190 0
--133 1 -137 33 -202 84 -170 240 -269 427 -269 139 0 260 53 350 153 186 207
-157 523 -62 690 -88 66 -157 90 -273 95 -80 3 -105 0 -162 -20z m317 -92 c76
--37 153 -113 190 -190 27 -54 29 -70 30 -165 0 -93 -3 -111 -27 -162 -53 -114
--166 -202 -291 -228 -171 -35 -358 64 -435 228 -24 50 -27 69 -27 162 1 94 3
-111 27 160 36 73 85 130 148 170 76 49 122 60 230 57 80 -3 104 -8 155 -32z" />
-                    <path d="M395 1159 c-16 -5 -51 -30 -76 -56 -25 -27 -58 -56 -73 -66 -34 -23
--34 -60 -1 -109 14 -21 30 -49 35 -63 13 -33 33 -28 40 11 l6 29 17 -32 c9
--17 22 -33 29 -36 10 -3 8 -13 -6 -41 -11 -20 -17 -39 -14 -42 4 -3 9 3 12 13
-5 16 13 18 59 14 86 -10 150 1 162 25 6 12 17 29 24 38 13 15 15 15 32 0 11
--10 19 -12 19 -6 0 6 -6 15 -14 19 -12 6 -12 15 -3 44 l11 35 26 -30 c16 -17
-33 -27 41 -24 8 3 27 38 43 77 35 86 29 112 -31 131 -21 7 -63 28 -94 46 -52
-31 -63 34 -135 33 -44 0 -92 -5 -109 -10z m238 -37 c26 -16 67 -37 92 -46 55
--21 57 -37 18 -126 l-26 -61 -25 25 c-19 19 -26 38 -30 83 -3 35 -13 71 -26
-90 -28 44 -41 42 -14 -2 17 -31 20 -47 16 -116 -4 -70 -8 -83 -33 -109 -28
--30 -45 -31 -45 -4 0 8 4 13 8 10 5 -3 19 4 30 15 26 23 29 74 6 83 -8 3 -12
-10 -9 16 3 5 -1 10 -9 10 -22 0 -20 -13 4 -35 45 -41 15 -76 -58 -68 -48 5
--53 3 -82 -28 -25 -28 -33 -32 -48 -23 -9 6 -16 22 -15 35 5 79 12 122 22 132
-9 9 10 4 5 -19 -5 -26 -1 -35 26 -57 38 -33 52 -33 84 -4 36 33 41 62 16 87
--17 17 -30 21 -58 17 -82 -11 -94 -20 -97 -69 -2 -18 -5 -40 -8 -48 -3 -8 -8
--24 -10 -35 -7 -34 -28 31 -34 107 -5 56 -3 71 15 100 11 18 20 38 19 43 -1 6
-9 12 23 13 14 2 29 7 33 12 5 4 44 6 87 4 65 -2 85 -8 123 -32z m-299 -44
-c-12 -23 -18 -59 -18 -115 -1 -74 -12 -116 -23 -86 -2 7 -17 31 -33 55 -41 60
--39 83 8 107 22 11 46 31 56 45 23 37 30 32 10 -6z m200 -77 c10 -11 13 -21 7
--25 -5 -4 -12 -2 -16 4 -11 17 -25 11 -25 -11 0 -16 4 -19 21 -14 18 6 19 4
-10 -13 -14 -26 -46 -33 -68 -16 -17 13 -17 15 -1 24 9 6 15 17 12 25 -9 21
--19 19 -31 -7 -10 -21 -12 -21 -18 -5 -4 9 -2 24 5 32 10 12 24 16 76 24 6 0
-19 -8 28 -18z m-8 -129 c16 -10 44 -68 37 -76 -4 -3 -44 -6 -90 -6 -67 0 -83
-3 -83 15 0 9 9 15 23 15 14 0 35 13 50 30 27 30 43 36 63 22z" />
-                    <path d="M405 1120 c-3 -6 1 -7 9 -4 16 6 19 -4 17 -56 -1 -25 -1 -25 10 -3
-21 40 -13 100 -36 63z" />
-                    <path d="M561 1082 c-18 -34 24 -57 49 -27 10 12 10 18 0 30 -17 20 -37 19
--49 -3z" />
-                    <path d="M366 1075 c-21 -22 -16 -39 12 -43 28 -4 40 24 20 44 -13 14 -17 14
--32 -1z" />
-                    <path d="M175 1077 c-8 -19 -19 -63 -25 -99 -14 -76 -1 -162 31 -215 62 -101
-225 -174 339 -153 65 12 81 20 78 39 -4 17 -11 17 -94 6 -100 -14 -231 47
--281 132 -36 62 -42 155 -14 242 11 36 18 68 15 73 -12 18 -36 6 -49 -25z" />
-                    <path d="M1930 874 c-11 -12 -10 -18 3 -31 8 -9 23 -13 31 -10 21 8 21 43 0
-51 -21 8 -20 8 -34 -10z" />
-                    <path d="M2174 876 c-9 -24 4 -48 23 -44 12 2 18 12 18 28 0 29 -32 41 -41 16z" />
-                    <path d="M1080 745 c0 -124 0 -125 23 -121 19 3 22 9 20 50 l-1 46 42 0 c60 0
-86 22 86 71 0 60 -25 79 -105 79 l-65 0 0 -125z m120 70 c17 -20 3 -54 -25
--61 -38 -9 -49 0 -51 39 -1 35 1 37 31 37 18 0 38 -7 45 -15z" />
-                    <path d="M2672 748 c3 -117 4 -121 26 -124 22 -4 22 -3 22 121 l0 125 -25 0
--26 0 3 -122z" />
-                    <path d="M2787 750 c1 -66 4 -120 7 -120 3 0 36 0 72 0 59 0 68 3 95 29 25 26
-29 37 29 86 0 31 -5 65 -10 76 -17 31 -64 49 -132 49 l-63 0 2 -120z m134 61
-c19 -15 24 -29 24 -65 0 -25 -5 -50 -12 -57 -13 -13 -89 -29 -98 -21 -3 3 -5
-41 -5 84 l0 78 34 0 c19 0 44 -9 57 -19z" />
-                    <path d="M2040 830 c0 -11 -7 -20 -15 -20 -8 0 -15 -9 -15 -20 0 -11 7 -20 15
--20 12 0 15 -13 15 -60 0 -52 3 -61 25 -76 31 -20 78 -12 73 14 -2 11 -13 17
--28 17 -23 0 -25 4 -28 57 -3 57 -3 57 25 55 19 -1 28 3 31 16 3 13 -3 17 -27
-17 -24 0 -31 4 -31 20 0 13 -7 20 -20 20 -13 0 -20 -7 -20 -20z" />
-                    <path d="M1306 797 c-11 -8 -15 -19 -10 -30 6 -16 8 -16 34 0 30 17 60 12 60
--11 0 -9 -15 -17 -39 -21 -50 -8 -76 -35 -67 -70 9 -37 50 -54 85 -34 22 13
-29 13 39 2 17 -18 41 -16 49 3 4 10 0 20 -10 26 -13 7 -17 23 -17 66 0 32 -5
-63 -12 70 -16 16 -90 15 -112 -1z m80 -123 c-3 -8 -17 -14 -31 -14 -22 0 -26
-4 -23 22 2 14 12 24 28 28 26 6 37 -8 26 -36z" />
-                    <path d="M1475 781 c26 -119 40 -154 63 -156 18 -1 24 6 33 39 5 23 14 52 18
-66 9 27 9 28 33 -55 12 -42 18 -49 38 -49 22 0 25 7 41 76 9 42 19 84 22 92 5
-12 0 16 -18 16 -21 0 -25 -6 -31 -47 -4 -27 -10 -57 -14 -67 -6 -17 -8 -16
--14 10 -24 99 -26 104 -49 104 -20 0 -25 -8 -35 -60 -7 -33 -16 -60 -21 -60
--4 0 -12 26 -17 58 -8 49 -12 57 -32 60 -22 3 -23 1 -17 -27z" />
-                    <path d="M1766 794 c-19 -19 -21 -58 -3 -72 6 -6 28 -14 47 -19 20 -5 35 -16
-35 -24 0 -18 -42 -24 -61 -9 -11 10 -17 10 -30 0 -24 -21 7 -45 60 -45 51 0
-76 18 76 55 0 33 -13 45 -59 57 -19 5 -36 14 -39 21 -6 18 28 27 50 13 15 -10
-23 -9 35 0 13 12 13 14 -3 26 -25 18 -89 16 -108 -3z" />
-                    <path d="M1930 714 c0 -93 1 -95 23 -92 21 3 22 7 22 95 0 90 -1 93 -22 93
--22 0 -23 -3 -23 -96z" />
-                    <path d="M2172 718 c3 -85 5 -93 23 -93 18 0 20 8 23 93 l3 92 -26 0 -26 0 3
--92z" />
-                    <path d="M2250 808 c0 -2 15 -43 34 -92 31 -83 36 -90 61 -90 25 0 30 7 61 90
-18 49 34 90 34 92 0 1 -11 2 -24 2 -21 0 -27 -9 -46 -66 -12 -36 -25 -62 -29
--57 -4 4 -15 34 -25 66 -15 49 -20 57 -42 57 -13 0 -24 -1 -24 -2z" />
-                    <path d="M2485 785 c-78 -77 32 -212 118 -145 38 30 22 47 -28 29 -35 -13 -38
--12 -57 11 l-20 25 66 3 c59 3 66 5 66 23 0 23 -18 61 -34 71 -25 17 -87 8
--111 -17z m95 -25 c10 -18 8 -20 -30 -20 -41 0 -49 7 -28 28 18 18 46 14 58
--8z" />
-                    <path d="M848 551 c-43 -44 -78 -84 -78 -90 0 -15 37 -51 52 -51 15 0 168 153
-168 168 0 16 -37 52 -52 52 -7 0 -47 -36 -90 -79z" />
-                    <path d="M970 458 c-11 -12 -20 -35 -20 -52 1 -26 28 -59 179 -213 167 -171
-180 -183 214 -183 44 0 77 28 77 65 0 30 -32 67 -225 263 -122 123 -145 142
--173 142 -19 0 -39 -8 -52 -22z m239 -192 c130 -132 162 -169 159 -187 -7 -53
--37 -35 -190 118 -188 187 -218 233 -155 233 16 0 72 -50 186 -164z" />
-                </g>
-            </svg> -->
-        </div>
+        </div> -->
         <div class="home__desc">
             <p>
-                No need to put on your doggie detective hat. <br> Just upload your photo, and we'll reveal your furry
-                friend's breed, <br> no magnifying glass required!
+               <q>No need to put on your doggie detective hat. <br> Just upload your photo, and we'll reveal your furry
+                friend's breed, no magnifying glass required!</q> 
             </p>
         </div>
     </div>
