--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,7 +1,6 @@
 /* ================ ABOUT PAGE ====================== */
 
 .about__project {
-    color: #000;
     padding: 20px;
     overflow-x: hidden;
 }
@@ -53,6 +52,10 @@
     border: 2px solid;
 }
 
+.team__card:hover{
+    transform: scale(0.97);
+}
+
 .team__img img {
     border-radius: 50%;
     width: 100px;
@@ -66,7 +69,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #000;
+    /* color: #000; */
     margin-right: auto;
 }
 
@@ -106,7 +109,8 @@
 
 @media screen and (max-width: 768px) {
     .team__card__container{
-        display: grid;
+        display: flex;
+        flex-direction: column;
     }
 
     .team__left{
