--- a/src/app/bts/bts.component.html
+++ b/src/app/bts/bts.component.html
@@ -2,7 +2,7 @@
     <div class="pdid__project">
         <div class="pdid__title__space">
             <div class="pdid__title">
-                <h1>Project in Detail</h1>
+                <h1><u>Project in Detail</u></h1>
             </div>
         </div>
 
