--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -87,7 +87,6 @@ figure:hover img {
 
 .title {
     color: #fff;
-
 }
 
 .title--primary {
@@ -117,7 +116,14 @@ img {
     margin-bottom: 5px;
     padding: 15px;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    border-radius: 10px;
+    outline: 1px solid #fff;
 }
 
 input[type=text] {
