--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -26,7 +26,7 @@
 
 .navbar {
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-	background-color: #fff;
+	background-color: #111111;
 	padding: 1rem 1.15rem;
 	border-bottom: 1px solid #eceef3;
 }
@@ -86,7 +86,7 @@
 .navbar .navbar-header .navbar-toggler span {
 	height: 2px;
 	width: 22px;
-	background-color: #929aad;
+	background-color: #111;
 	display: block;
 }
 
@@ -96,7 +96,7 @@
 
 .navbar .navbar-header>a {
 	font-weight: 500;
-	color: #3c4250;
+	color: #fff !important;
 }
 
 .navbar .navbar-menu {
@@ -136,7 +136,7 @@
 }
 
 .navbar .navbar-menu .navbar-nav>li>a {
-	color: #3c4250;
+	color: #fff !important;
 	text-decoration: none;
 	display: inline-block;
 	padding: 0.5rem 1rem;
@@ -144,6 +144,7 @@
 
 .navbar .navbar-menu .navbar-nav>li>a:hover {
 	color: #66f;
+    transform: scale(0.97);
 }
 
 @media (max-width: 768px) {
