--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,8 @@
 
 body {
     /* font-family: 'Balsamiq Sans', cursive; */
-    font-family: 'Noto Sans Display', sans-serif;
+    /* font-family: 'Noto Sans Display', sans-serif; */
+    font-size: Canva Sans,Open Sans,sans-serif;
     font-size: 0.925rem;
     /* background-color: #c1c1c1; */
     /* background-image: linear-gradient(315deg, #f6fba2 0%, #20ded3 74%); */
