--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,7 @@
 .home__container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    /* flex-direction: column; */
+    grid-template-columns: repeat(2, 1fr);
     justify-content: space-evenly;
     margin: auto;
 }
@@ -20,10 +21,10 @@
 }
 
 .home__desc {
-    /* display: grid; */
-    /* align-items: center; */
+    display: grid;
+    align-items: center;
     text-align: center;
-    /* justify-content: center; */
+    justify-content: center;
 }
 
 .home__desc p {
@@ -88,9 +89,9 @@
 }
 
 .upload__preview {
-    width: 100%;
+    width: 450px;
+    height: 450px;
     padding: 10px;
-    border-radius: 10px;
     margin-bottom: 30px;
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -102,13 +103,20 @@
 
 .upload__img__bg {
     opacity: 0.7;
+    width: 400px;
+    height: 400px;
+}
+
+.file-ip-1-preview{
+    width: 400px;
+    height: 400px;
 }
 
 .result__bar {
-    width: auto;
-    height: auto;
+    width: 300px;
+    height: 100px;
     padding: 20px;
-    margin: 10px;
+    margin: 30px;
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(4px);
@@ -117,6 +125,7 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 10px;
     font-weight: 700;
+    text-align: center;
 }
 
 
@@ -133,6 +142,7 @@
         /* width: 100%; */
         padding-top: 30px;
         margin-top: 0;
+        order: 2;
     }
 
     .home__gif {
