--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -103,13 +103,9 @@
 
 .upload__img__bg {
     opacity: 0.7;
-    width: 400px;
-    height: 400px;
-}
-
-.file-ip-1-preview{
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .result__bar {
